# polymethod

./: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  source.rst
overloading/: __init__.py  api.py  datastructures.py  exceptions.py  type_matching.py
overloading/tests/: test_class_methods.py  test_instance_methods.py  test_static_methods.py
polymethod/: implementation.py  missing.py
polymethod/tests/: test_class_methods.py  test_instance_methods.py  test_static_methods.py
