[metadata]
license_files = LICENSE

[pycodestyle]
max_line_length = 120

[flake8]
max_line_length = 120
# overloaded function
extend-ignore=F811

[mypy]
disable_error_code = no-redef

[pylint.FORMAT]
max-line-length=120

[pylint.TYPECHECK]

# regex of default ignored + arg args kwargs
ignored-argument-names=_.*|^ignored_|^unused_|arg|args|kwargs

# general disable:
# C: Conventions like naming variables
# R: Code complexity like too many variables in function
# W0511: show TODO
disable=C,R,W0511

# ignore file completely
ignore=_version.py
